--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@mantine/core": "^7.13.0",
     "@mantine/hooks": "^7.13.0",
+    "@tabler/icons-react": "^3.19.0",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
