--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
   "dependencies": {
     "@mantine/core": "^7.13.0",
     "@mantine/hooks": "^7.13.0",
+    "@mantine/notifications": "^7.13.2",
     "@tabler/icons-react": "^3.19.0",
+    "date-fns": "^4.1.0",
+    "mantine-form-yup-resolver": "^2.0.0",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-preset-mantine": "^1.0.5"
+    "tailwind-preset-mantine": "^1.0.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
+    "component": "^1.1.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
     "eslint-config-prettier": "^8.10.0",
