--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/notifications": "^7.13.2",
     "@tabler/icons-react": "^3.19.0",
     "date-fns": "^4.1.0",
+    "firebase": "^10.14.0",
     "mantine-form-yup-resolver": "^2.0.0",
     "next": "14.2.13",
     "react": "^18.3.1",
